styled site and linked resume page to it

--- a/index.html
+++ b/index.html
@@ -5,9 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    <h1>My Portfolio Page</h1>
+    <header>
+        <img id="logo" src="https://images.squarespace-cdn.com/content/v1/55305a8ee4b0fbdc0bcc99ba/1509210355095-2A35UWJQVX0EQ4YFW4K9/ACA_standard_stacked.png">
+        <h1>My Portfolio Page</h1>
+    </header>
+    <nav>
+        <ul>
+            <li>Projects</li>
+            <li>About Me</li>
+            <li>Contact Me</li> 
+            <li><a href="https://j3553pat.github.io/aca-grid-resume/" alt="Resume Page">Resume</a></li>
+        </ul>
+    </nav>
+    <aside>
+    </aside>
+    <main>
+    </main>
+    <footer>
+    </footer>
 </body>
 </html>
