added about me info and styles sheet

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav>
         <ul>
             <li>Projects</li>
-            <li>About Me</li>
+            <li><a href=aboutPage.html>About Me</a></li>
             <li>Contact Me</li> 
             <li><a href="https://j3553pat.github.io/aca-grid-resume/" alt="Resume Page">Resume</a></li>
         </ul>
