--- a/aboutPage.html
+++ b/aboutPage.html
@@ -12,7 +12,13 @@
 
     </header>
     <nav>
-        
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li>Projects</li>
+            <li><a href="aboutPage.html">About Me</a></li>
+            <li><a href="contact.html">Contact Me</a></li> 
+            <li><a href="https://j3553pat.github.io/aca-grid-resume/" alt="Resume Page">Resume</a></li>
+        </ul>
     </nav>
     <aside>
 
