--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>My Portfolio</title>
 </head>
 <body>
     <header>
@@ -17,9 +17,10 @@
     </header>
     <nav>
         <ul>
+            <li><a href="index.html">Home</a></li>
             <li>Projects</li>
-            <li><a href=aboutPage.html>About Me</a></li>
-            <li>Contact Me</li> 
+            <li><a href="aboutPage.html">About Me</a></li>
+            <li><a href="contact.html">Contact Me</a></li> 
             <li><a href="https://j3553pat.github.io/aca-grid-resume/" alt="Resume Page">Resume</a></li>
         </ul>
     </nav>
