added media query for contact page

--- a/contact.html
+++ b/contact.html
@@ -22,12 +22,14 @@
       <li><a href="https://j3553pat.github.io/aca-grid-resume/" alt="Resume Page">Resume</a></li>
   </ul>
 </nav>
-  <main>
-    <form action="results.html" method="GET" enctype="multipart/form-data">
+<main>
+  <form action="results.html" method="GET" enctype="multipart/form-data">
+    <section class="nameinfo">
       <div>
         <label for="name">Name</label>
-        <input type="text" name="name" id="name" >
-    </div>
+        <input type="text" name="name" id="name">
+      </div>
+    </section>
     <div>
       <label for="email">Email</label>
       <input type="email" name="email" id="email" required>
