added more content and media queries to contact page

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
     </div>
     <div>
       <label for="age">Age</label>
-      <input type="number" name="age" id="age" min="18" max="120" step="5">
+      <input type="number" name="age" id="age">
     </div>
     <div>
       <label for="date">Current Date</label>
@@ -83,7 +83,6 @@
       <label for="comments">If any comments, please insert in comment box.</label>
       </article>
       <textarea id="comments" name="comments" minlength="20" maxlength="500" cols="30" rows="10"></textarea>
-    <input type="hidden" name="hidden" value="hi">
     <div>
       <label for="file">Optional, but if you want to upload any files, here is a upload box.</label>
       <input id="file" type="file" name="file">
