--- a/results.html
+++ b/results.html
@@ -10,9 +10,14 @@
   <title>Results</title>
 </head>
 <body>
-  <div id="results"></div>
+  <header>
+    <h1>Results</h1>
+    <div id="results"></div>
+  </header>
+  <main></main>
   <br>
   <a href="contact.html">Go Back</a>
   <script src="contact.js"></script>
+</main>
 </body>
 </html>
