fixed issue with spacing on contact page and added content in about me section

--- a/aboutPage.html
+++ b/aboutPage.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
-
+    <link rel="stylesheet" href="about-styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
+    <title>About Me Page</title>
 </head>
 <body>
     <header>
-
+        <h1>About Me</h1>
     </header>
     <nav>
         <ul>
@@ -21,9 +24,16 @@
         </ul>
     </nav>
     <aside>
-
+        <p>Here are a few things about myself I'm comfortable sharing.</p>
     </aside>
     <main>
+        <section class="container">
+            <article class="card">
+                <div class="card-img"></div>
+                <h2></h2>
+                <p></p>
+            </article>
+        </section>
 
     </main>
     <footer>
