added more content and transitions to cards on the about me page

--- a/aboutPage.html
+++ b/aboutPage.html
@@ -30,11 +30,22 @@
         <section class="container">
             <article class="card">
                 <div class="card-img"></div>
-                <h2></h2>
-                <p></p>
+                <h2>Big Foodie!</h2>
+                <p>Love trying out good and different types of food!
+                    my favorite so far would have to be BBQ!
+                </p>
+            </article>
+            <article class="card">
+                <div class="card-img"></div>
+                <h2>Gamer!</h2>
+                <p>I always liked video games and my favorite gaming series would be Metal Gear or almost any game produced by Rockstar Inc.</p>
+            </article>
+            <article class="card">
+                <div class="card-img"></div>
+                <h2>title</h2>
+                <p>text</p>
             </article>
         </section>
-
     </main>
     <footer>
 
