added eventlisteners linked to contact html

--- a/contact.html
+++ b/contact.html
@@ -96,11 +96,11 @@
       <label for="url">URL</label>
       <input type="url" name="url" id="url">
     </section>
-    <button type="reset">Reset</button>
-    <button type="submit">Submit</button>
+    <button type="reset" id="reset" onclick="resetBtn(this)">Reset</button>
+    <button type="submit" id="submit" class="submit" onclick="submitBtn()">Submit</button>
   </form>
   </main>
   <!-- <script src="scripts.js"></script> -->
-  <script src="contact.js"></script>
+  <script src="scripts.js"></script>
 </body>
 </html>
