--- a/results.html
+++ b/results.html
@@ -17,7 +17,7 @@
   <main></main>
   <br>
   <a href="contact.html">Go Back</a>
-  <script src="contact.js"></script>
+  <script src="scripts.js"></script>
 </main>
 </body>
 </html>
