added final touches for aboutme page

--- a/aboutPage.html
+++ b/aboutPage.html
@@ -24,31 +24,42 @@
         </ul>
     </nav>
     <aside>
-        <p>Here are a few things about myself I'm comfortable sharing.</p>
+        <p>Here are a few things about myself.</p>
     </aside>
     <main>
         <section class="container">
             <article class="card">
-                <div class="card-img"></div>
                 <h2>Big Foodie!</h2>
                 <p>Love trying out good and different types of food!
                     my favorite so far would have to be BBQ!
                 </p>
             </article>
             <article class="card">
-                <div class="card-img"></div>
                 <h2>Gamer!</h2>
                 <p>I always liked video games and my favorite gaming series would be Metal Gear or almost any game produced by Rockstar Inc.</p>
             </article>
             <article class="card">
-                <div class="card-img"></div>
-                <h2>title</h2>
-                <p>text</p>
+                <h2>Aspiring Developer!</h2>
+                <p>Thought about getting into tech for a good while. Really happy to see that I am chasing</p>
+            </article>
+        </section>
+        <section class="container">
+            <article class="card">
+                <h2>Photography!</h2>
+                <p>I used to take pictures with a DSLR camera until it gave up on me. 
+                    Usually I take pictures using my phone with adjusted settings on my free time.
+                </p>
+            </article>
+            <article class="card">
+                <h2>Hosted a podcast for a short time!</h2>
+                <p>I had created and hosted a podcast. 
+                    Unfortunately it only lasted for a couple of episodes but it is still running to this day and eventually will relaunch again.</p>
+            </article>
+            <article class="card">
+                <h2>Been to about 15 states</h2>
+                <p>Was on a road trip for a small period of time! Saw a lot of amazing sceneries and beautiful cities on the road.</p>
             </article>
         </section>
     </main>
-    <footer>
-
-    </footer>
 </body>
 </html>
